@@ -55,7 +55,7 @@ rm -rf $RPM_BUILD_ROOT
 %defattr(-,root,root,-)
 
 %changelog
-* Thu Sep 04 2003 gtk-perl-list@gnome.org - 0.97-8
+* @DATE@ gtk-perl-list@gnome.org - @VERSION@
 - Specfile autogenerated.
 
 # Copyright (C) 2003 by the gtk2-perl team (see the file AUTHORS for the full
